--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ packages = find:
 python_requires = >=3.6
 install_requires=
     mpi4py
+    pytest
+    pytest-mpi
 
 [options.packages.find]
 where = src
