--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,13 +24,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install MPI
       run: |
         sudo apt-get --yes update
         sudo apt-get --yes install mpi-default-dev
+    - name: Install dependencies
+      run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-mpi mpi4py
+        python -m pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install package
+      run: |
+        python -m pip install --editable .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
